frontend/apps/consumer/deploy/pre/preview-service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "ecommerce-frontend-preview-service",
    namespace: "ecommerce",
  },
  spec: {
    selector: {
      app: "ecommerce-frontend",
    },
    ports: [{
      protocol: "TCP",
      port: 30080,
      targetPort: 80,
    }],
    type: "ClusterIP",
  },
}
